@@ -268,6 +268,39 @@ New checkers
       import codecs
       codecs.encode('hello world', 'hex')
 
+
+* A new warning was added, ``overlapping-except``, which is emitted
+  when an except handler treats two exceptions which are *overlapping*.
+  This means that one exception is an ancestor of the other one or it is
+  just an alias.
+
+  For example, in Python 3.3+, IOError is an alias for OSError. In addition, socket.error is
+  an alias for OSError. The intention is to find cases like the following:
+
+  .. code-block:: python
+
+      import socket
+      try:
+          pass
+      except (ConnectionError, IOError, OSError, socket.error):
+          pass
+
+* A new Python 3 checker was added to warn about accessing ``sys.maxint``.  This attribute was
+  removed in Python 3 in favor of ``sys.maxsize``.
+
+  .. code-block:: python
+
+      import sys
+      print(sys.maxint)
+
+  Instead of using ``sys.maxint``, use ``sys.maxsize``
+
+  .. code-block:: python
+
+      import sys
+      print(sys.maxsize)
+
+
 Other Changes
 =============
 
